<resources>

    <string name="app_name">SnagTag</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_id">684920414900634</string>
	<string name="login">Log in using Facebook</string>
	<string name="loginSnag">Log in using SnagTag</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="ic_action_search">Search</string>
    <string name="action_search">Search</string>
    <string name="action_profile">Profile</string>
    <string name="action_cart">Cart</string>
    <string name="action_home">Home</string>
    <string name="action_share">Share</string>
    <string name="action_barcode">Scan Barcode</string>
    <string name="cart_close">Cart Close</string>
    <string name="cart_open">Cart Open</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="closet">Closet</string>
    <string name="settings">Settings</string>
    <string name="tag_history">Tag History</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="cart_details">Cart Details</string>
    <string name="dollar_symbol">$</string>
    <string name="dollars_zero">0.00</string>
    <string name="skip">Skip To Cart Drawer</string>
    <string name="Recommendation">Recommend</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="emptyString"></string>
    <string name="purchase">Purchased</string>
    <string name="close">Close</string>
    <string name="styles">Styles</string>
    <string name="url">Url</string>
    <string name="sizes">Sizes</string>
    <string name="add2Cart">Add to Cart</string>
    <string name="purhcase">Purchase</string>
    
</resources>
