<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
        android:id="@+id/action_home" 
        android:title="@string/action_home" 
        android:icon="@drawable/ic_action_home"
        app:showAsAction="ifRoom"
         /> 
    <item 
        android:id="@+id/action_profile" 
        android:title="@string/action_profile" 
        android:icon="@drawable/ic_action_person"
        app:showAsAction="ifRoom"/>
    <item 
        android:id="@+id/action_cart" 
        android:title="@string/action_cart" 
        android:icon="@drawable/ic_action_collection"
        app:showAsAction="always"/>
    <item 
        android:id="@+id/action_search" 
        android:icon="@drawable/ic_action_search" 
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item 
        android:id="@+id/action_share" 
        android:title="@string/action_share" 
        android:icon="@drawable/ic_action_share"
        app:showAsAction="ifRoom"/>
     <item 
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:showAsAction="never" />
</menu>