<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
     xmlns:app="http://schemas.android.com/apk/res-auto">
    <item 
        android:id="@+id/action_search" 
        android:icon="@drawable/ic_action_search" 
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/> 
    <item 
        android:id="@+id/action_profile" 
        android:title="@string/action_profile" 
        android:icon="@drawable/ic_action_person"
        app:showAsAction="ifRoom"/>
    <item 
        android:id="@+id/action_cart" 
        android:title="@string/action_cart" 
        android:icon="@drawable/ic_action_collection"
        app:showAsAction="always"/>
</menu>
