<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/date_color"
    android:orientation="vertical" >

    
    <TextView
        android:id="@+id/tabTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <com.parse.ParseImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/imageplace" />
          <!-- android:maxHeight="280dp" android:maxWidth="280dp" -->     


        <ui.TextViewRobotoThin
            android:id="@+id/price"
            android:textSize = "40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

	<TextView
	    android:id="@+id/store"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="Large Text"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
	    android:id="@+id/description"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="Large Text"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <Button
	        android:id="@+id/colors"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/styles" />

	    <Button
	        android:id="@+id/purchase"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/url" />

	    <Button
	        android:id="@+id/sizes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sizes" />

	    <Button
	        android:id="@+id/add2Cart"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/add2Cart" />

	</LinearLayout>

	<RatingBar
	    android:id="@+id/rate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    
    <com.parse.ParseImageView
        android:id="@+id/sim1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/imageplace" />
    
    <com.parse.ParseImageView
	        android:id="@+id/sim2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:adjustViewBounds="true"
	        android:scaleType="fitCenter"
	        android:src="@drawable/imageplace" />

	</LinearLayout>

</LinearLayout>
